--- a/app/src/main/res/layout/activity_qrcode_scanner.xml
+++ b/app/src/main/res/layout/activity_qrcode_scanner.xml
@@ -7,10 +7,9 @@
     tools:context=".QRCodeScanner">
 
     <com.budiyev.android.codescanner.CodeScannerView
-        android:id="@+id/scanner_view"
+        android:id="@+id/scanner_view_Scan"
         android:layout_width="match_parent"
-        android:layout_height="400dp
-"
+        android:layout_height="400dp"
         app:autoFocusButtonColor="@android:color/white"
         app:autoFocusButtonVisible="true"
         app:flashButtonColor="@android:color/white"
@@ -25,7 +24,7 @@
         app:maskColor="#77000000"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
