--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,72 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login">
 
-    <TextView
-        android:id="@+id/txtPassLog"
-        android:layout_width="82dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Пароль"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/btnLog"
-        app:layout_constraintTop_toTopOf="@+id/etxtPassLog" />
+
 
     <EditText
         android:id="@+id/etxtPassLog"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/btnLog"
-        app:layout_constraintStart_toStartOf="@+id/etxtPhoneLog"
-        app:layout_constraintTop_toBottomOf="@+id/etxtPhoneLog" />
+        android:hint="Пароль"
+        android:inputType="textPassword"/>
 
     <EditText
         android:id="@+id/etxtPhoneLog"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="230dp"
         android:ems="10"
         android:inputType="phone"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="@+id/btnLog"
-        app:layout_constraintStart_toEndOf="@+id/txtPhoneLog"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="Номер телефона"
+        android:text="" />
 
     <TextView
         android:id="@+id/txtPhoneLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Телефон (+7)"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/btnLog"
-        app:layout_constraintTop_toTopOf="@+id/etxtPhoneLog" />
+        android:layout_marginTop="240dp"
+        android:layout_marginStart="20dp"
+        android:text="(+7)"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/btnLog"
-        android:layout_width="354dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:text="Войти"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etxtPassLog" />
+        android:layout_marginTop="330dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Войти" />
 
     <Button
         android:id="@+id/btnLogReg"
-        android:layout_width="354dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:text="Регистрация"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLog" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="380dp"
+        android:text="Регистрация" />
+</FrameLayout>
