--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,76 +8,60 @@
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="230dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
+        android:hint="Номер телефона"
         android:inputType="phone"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textPhone"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="" />
 
     <TextView
         android:id="@+id/textPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:text="Телефон (+7)"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editTextPhone" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="240dp"
+        android:text="(+7)"
+        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textPass"
-        android:layout_width="82dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Пароль"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textPhone"
-        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword" />
 
-    <TextView
-        android:id="@+id/textName"
-        android:layout_width="82dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Имя"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textPhone"
-        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+        android:hint="Пароль"
+        android:inputType="textPassword"/>
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="330dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
+        android:hint="Имя"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
     <Button
         android:id="@+id/btnReg"
-        android:layout_width="354dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="Регистрация"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintStart_toStartOf="@+id/textName"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
