--- a/app/src/main/res/layout/fragment_input_by_hand.xml
+++ b/app/src/main/res/layout/fragment_input_by_hand.xml
@@ -111,6 +111,31 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp">
 
+                <EditText
+                    android:id="@+id/finalSum"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Итоговая сумма"
+                    android:textColor="@color/black"
+                    android:inputType="number|numberDecimal"/>
+                <Button
+                    android:layout_marginStart="20dp"
+                    android:id="@+id/SumTables"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Рассчитать сумму"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp">
+
                 <TextView
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
