--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:ems="10"
+        android:maxLength="20"
         android:hint="Пароль"
         android:inputType="textPassword"/>
 
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="20dp"
+        android:maxLength="10"
         android:layout_marginTop="230dp"
         android:ems="10"
         android:inputType="phone"
