--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="230dp"
         android:layout_marginEnd="20dp"
         android:ems="10"
+        android:maxLength="10"
         android:hint="Номер телефона"
         android:inputType="phone"
         android:text="" />
@@ -36,6 +37,7 @@
         android:layout_marginTop="280dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:maxLength="20"
         android:ems="10"
         android:hint="Пароль"
         android:inputType="textPassword"/>
@@ -47,6 +49,7 @@
         android:layout_marginTop="330dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:maxLength="10"
         android:ems="10"
         android:hint="Имя"
         android:inputType="textPersonName"
