--- a/app/src/main/res/layout/fragment_change_name.xml
+++ b/app/src/main/res/layout/fragment_change_name.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="260dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:maxLength="10"
         android:hint="Новое имя"
         android:inputType="text" />
 
@@ -23,6 +24,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="310dp"
+        android:maxLength="10"
         android:hint="Пароль"
         android:inputType="textPassword"
         android:text="" />
