--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="260dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:maxLength="20"
         android:hint="Старый пароль"
         android:inputType="textPassword" />
 
@@ -23,6 +24,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="310dp"
+        android:maxLength="20"
         android:hint="Новый пароль"
         android:inputType="textPassword"
         android:text="" />
