--- a/app/src/main/res/layout/fragment_change_phone.xml
+++ b/app/src/main/res/layout/fragment_change_phone.xml
@@ -39,6 +39,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="310dp"
         android:ems="10"
+        android:maxLength="10"
         android:hint="Новый номер"
         android:inputType="number"
         android:text="" />
@@ -49,6 +50,7 @@
         android:id="@+id/writePasswordOnChangePhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLength="10"
         android:layout_marginTop="360dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
