--- a/app/src/main/res/layout/fragment_changing_data.xml
+++ b/app/src/main/res/layout/fragment_changing_data.xml
@@ -76,6 +76,7 @@
             </RadioGroup>
 
             <EditText
+                android:maxLength="20"
                 android:enabled="false"
                 android:id="@+id/nameOfOperationEdit"
                 android:layout_width="match_parent"
@@ -108,19 +109,23 @@
                     android:enabled="false"
                     android:id="@+id/dayEdit"
                     android:layout_weight="1"
+                    android:maxLength="2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:minHeight="48dp"
+                    android:textAlignment="center"
                     android:hint="Число"
                     android:inputType="number" />
                 <EditText
                     android:enabled="false"
                     android:id="@+id/monthEdit"
                     android:layout_weight="1"
+                    android:maxLength="2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="Месяц"
+                    android:textAlignment="center"
                     android:minHeight="48dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
@@ -128,11 +133,13 @@
                 <EditText
                     android:enabled="false"
                     android:id="@+id/yearEdit"
+                    android:maxLength="4"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
                     android:hint="Год"
+                    android:textAlignment="center"
                     android:minHeight="48dp"
                     android:inputType="number" />
             </LinearLayout>
@@ -147,11 +154,13 @@
 
                 <EditText
                     android:enabled="false"
+                    android:maxLength="8"
                     android:id="@+id/finalSumEdit"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="Итоговая сумма"
+                    android:textAlignment="center"
                     android:textColor="@color/black"
                     android:inputType="number|numberDecimal"/>
                 <Button
