--- a/app/src/main/res/layout/fragment_input_by_hand.xml
+++ b/app/src/main/res/layout/fragment_input_by_hand.xml
@@ -53,6 +53,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:maxLength="20"
                 android:hint="Наименование операции"
                 android:inputType="text"
                 android:minHeight="48dp" />
@@ -80,7 +81,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:minHeight="48dp"
+                    android:maxLength="2"
                     android:hint="Число"
+                    android:textAlignment="center"
                     android:inputType="number" />
                 <EditText
                     android:id="@+id/month"
@@ -88,7 +91,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="Месяц"
+                    android:maxLength="2"
                     android:minHeight="48dp"
+                    android:textAlignment="center"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number" />
@@ -98,7 +103,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
+                    android:maxLength="4"
                     android:hint="Год"
+                    android:textAlignment="center"
                     android:minHeight="48dp"
                     android:inputType="number" />
             </LinearLayout>
@@ -116,7 +123,9 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLength="8"
                     android:hint="Итоговая сумма"
+                    android:textAlignment="center"
                     android:textColor="@color/black"
                     android:inputType="number|numberDecimal"/>
                 <Button
