--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -5,9 +5,118 @@
     android:layout_height="match_parent"
     tools:context=".InsightsFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp">
+
+        <TextView
+            android:id="@+id/insightsTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:textSize="20dp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textColor="#ff0000"
+            android:text="Расходы"
+            android:layout_marginEnd="20dp"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:id="@+id/incomesTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textColor="#008000"
+            android:inputType="text"
+            android:textSize="20dp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:text="Поступления"
+            android:layout_marginStart="20dp"
+            android:textAlignment="center"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="10dp">
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/insightsBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Расходы"
+            android:layout_marginEnd="20dp"/>
+
+        <Button
+            android:layout_marginStart="20dp"
+            android:layout_weight="1"
+            android:id="@+id/incomesBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Поступления"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="10dp">
+
+        <EditText
+            android:id="@+id/monthData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:maxLength="2"
+            android:inputType="number"
+            android:layout_weight="1"
+            android:text="Месяц"
+            android:textAlignment="center"
+            android:layout_marginEnd="20dp"/>
+
+
+        <EditText
+            android:id="@+id/yearData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:maxLength="4"
+            android:inputType="number"
+            android:layout_weight="1"
+            android:layout_marginEnd="20dp"
+            android:textAlignment="center"
+            android:text="Год" />
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/editBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Изм."/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
         android:layout_marginBottom="50dp"
         android:id="@+id/recView"/>
+
+
 </FrameLayout>
