--- a/app/src/main/res/layout/activity_qrcode_scanner.xml
+++ b/app/src/main/res/layout/activity_qrcode_scanner.xml
@@ -9,7 +9,7 @@
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view_Scan"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="450dp"
         app:autoFocusButtonColor="@android:color/white"
         app:autoFocusButtonVisible="true"
         app:flashButtonColor="@android:color/white"
@@ -21,16 +21,52 @@
         app:frameAspectRatioHeight="1"
         app:frameSize="0.75"
         app:frameThickness="2dp"
-        app:maskColor="#77000000"/>
+        app:maskColor="#77000000"
+        />
 
     <TextView
-        android:id="@+id/textViewScan"
-        android:layout_width="wrap_content"
+        android:id="@+id/tttt"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="165dp"
-        android:layout_marginTop="450dp"
-        android:text="TextView" />
+        android:layout_below="@id/scanner_view_Scan"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="50dp"
+        android:text="Введите код из СМС"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_below="@id/tttt">
+
+        <EditText
+            android:layout_weight="1"
+            android:id="@+id/editTextSMSCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:hint="СМС код"/>
+
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/btnCheckAPI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="Отправить"
+            />
+    </LinearLayout>
+
+
+
 
 </RelativeLayout>
