--- a/app/src/main/res/layout/fragment_input_by_hand.xml
+++ b/app/src/main/res/layout/fragment_input_by_hand.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InputByHandFragment">
+    tools:context=".addelements.InputByHandFragment">
 
     <ScrollView
         android:layout_width="match_parent"
